--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/node-fetch": "^2.5.4",
     "core-js": "^3.4.3",
     "element-ui": "^2.13.0",
+    "tailwindcss": "^1.1.4",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
@@ -21,6 +24,7 @@
     "@vue/cli-service": "^4.1.0",
     "typescript": "~3.5.3",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-cli-plugin-tailwind": "^1.1.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
